2010-02-16: 1.21.13:
Added RANN as "suggested" package 

2010-02-14: 1.21.12:
minor code beautifications
Be more graceful if centWave does not find any peaks
- added progressInfo & callback functionality to xcmsSet
  e.g. test <- function(progress) cat(progress$group.nearest, "\n")
   xs <- xcmsSet(progressCallback=test)                            
   or: xs@progressCallback <- test                                 
   test with:  xsg <- group(xs, method="nearest")

- added headerfile to fix compiler warnings for fastMatch.c


2010-01-30: 1.21.11:
Allow an explicit center argument in retcor(method="obiwarp").

2010-01-06: 1.21.10:
Preparing for mzML support

2010-01-05: 1.21.9:
start to modularise the *.R files by extracting class definitions

2009-12-18: 1.21.8:
added absent(xset) / preseant(xset) function.
Fixed xcmsSet@filled in fillPeaks.chrom()
	   
2009-12-16: 1.21.7:
fillPeaks/getPeaks :  fix for R 2.11.0 :  weighted.mean() results in NA (not NaN) for zero weights
   (R 2.11.0 changelog: "...Zero weights are handled specially so an infinite value with zero weight does not force an NaN result.")

2009-11-30: 1.21.6:
Parameter unification: "massrange" replaced by "mzrange" and "timerange" replaced by "rtrange", for all xcms functions
R/xcmsRaw.R: added plotEIC()

2009-11-27: 1.21.5:
Added error messages for cases where the user specifies the step and/or method
parameters differently in the two ways they can be given to xcmsSet()

2009-11-25: 1.21.4: 
Fixed a dimension problem in collect() for MS2

2009-11-13: 1.21.3: 
added a check for (un)grouped xcmsSet to groupval() 
findmzROI shows scan number in case of errors
clarified manpage for diffreport, anova section

2009-11-08: 1.21.2: 
R/xcmsSet.R: added peakTable()

2009-10-28: 1.21.1: 
added a check for grouped xcmsSet with NA values (i.e. without fillPeaks()) to diffreport() 

2009-10-11: 1.18.4
group.nearest: fixed/added calculation of peaks-per-sampclass, 